--- a/gb/21/4/11/n12872653.md
+++ b/gb/21/4/11/n12872653.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fxhdff3615/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fxhdff3615/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fxhdff3615/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>周晓辉：南昌暴动中共不敢言说的史实</h2>
 
 <h6></h6>
 <hr>
 	<p>【大纪元2021年04月11日讯】近一段时间，中共各大电视台、网络平台纷纷播出百集洗脑微纪录片《百炼成钢：中国共产党的100年》，加上其他洗脑电影、宣传，在大陆俨然又掀起了一个洗脑小高潮。这大概是正在死路上狂奔的中共，意图在临死前多拉上几个陪葬者。因此，信了中共的宣传，那就是害了自身。这也是笔者推出系列反洗脑文章，揭穿中共在微纪录片中一个个欺世谎言的原因。</p>
-<p>在洗脑微纪录片第十集《南昌城头的枪声》开篇，就抛出了一个问题，那就是毛泽东为何要在中共军旗上加上“八一”二字？而这与中共在1927年8月1日发动的<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E5%8D%97%E6%98%8C%E6%9A%B4%E5%8A%A8.md#1">南昌暴动</a>有关。不过，洗脑片虽然讲述了南昌暴动的起因、经过，但还是有一些历史真相中共不敢言说。这些不敢言说的史实和真相包括：</p>
-<p>一、国民党为何要大肆屠杀共产党人。洗脑片中提到蒋介石和汪精卫皆发动了“发革命政变”，大杀中共党人，而为了夺取政权，中共中央临时政治局决意发动<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E5%8D%97%E6%98%8C%E6%9A%B4%E5%8A%A8.md#1">南昌暴动</a>和秋收暴动，并派周恩来作为前敌总指挥。洗脑片提到张国焘传达了共产国际的指示，即“如果有成功的把握，计划是可行的”。</p>
+<p>在洗脑微纪录片第十集《南昌城头的枪声》开篇，就抛出了一个问题，那就是毛泽东为何要在中共军旗上加上“八一”二字？而这与中共在1927年8月1日发动的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%97%E6%98%8C%E6%9A%B4%E5%8A%A8.md#1">南昌暴动</a>有关。不过，洗脑片虽然讲述了南昌暴动的起因、经过，但还是有一些历史真相中共不敢言说。这些不敢言说的史实和真相包括：</p>
+<p>一、国民党为何要如此严厉对待共产党人？洗脑片中提到蒋介石和汪精卫皆发动了“发革命政变”，大杀中共党人，而为了夺取政权，中共中央临时政治局决意发动<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%97%E6%98%8C%E6%9A%B4%E5%8A%A8.md#1">南昌暴动</a>和秋收暴动，并派周恩来作为前敌总指挥。洗脑片提到张国焘传达了共产国际的指示，即“如果有成功的把握，计划是可行的”。</p>
 <p>那么，为何蒋介石和汪精卫要将目标指向中共呢？笔者在上一篇《孙中山容共非联共 国民党清党重击中共》一文中已经点明，中共在遵照共产国际指示，让中共党员以个人身份加入国民党后，完全违背了孙中山允许其加入的条件，在国民党内大肆宣传共产主义，违背国民党的命令，在国民党内挑拨是非，即以亲俄亲共和远俄反共为划分界限，开始了左派对右派的反对和斗争，甚至将不亲俄亲共的国民党人骂成了“反革命派”，直至将他们开除出党。</p>
 <p>不仅如此，中共党员还窃取了国民党内组织、宣传等重要部门的领导职务，甚至还意图夺取军权。此外，中共由还策划了攻击外国领事馆、教堂、商社并造成人员伤亡、财产损失的“南京事件”。</p>
 <p>在国民党身处危急时刻，在意识到中共的巨大危害后，国民党主席蒋介石在北伐成功后毅然在南京开始“清党”。随之，发现了共产国际和中共阴谋的汪精卫也在武汉“清党”，大批中共党员和激进份子被捕，几百人被处死。这不是种什么因得什么果，又是什么？</p>
@@ -26,47 +26,48 @@
 <p>不过，很多中共党人反对共产国际的意见，认为暴动不能再拖，更不可停止；张发奎已受汪精卫包围，绝不会同意中共计划；中共不应依赖张发奎，因此暴动还是举行了。</p>
 <p>六、南昌八一纪念馆的群雕透玄机。中共为了纪念南昌暴动，曾建立了南昌八一纪念馆，并建立一组群雕。有意思的是，当时不过独立团小小上尉排长的林彪和隶属朱培德第三军（滇军）的军官教导团长兼南昌市公安局长的朱德，都成为了南昌暴动的重要领导人，在群雕中占有一席之地，而真正的策划与组织者张国焘、谭平山、瞿秋白等，因为政治原因却消失不见了。中共在天下人面前篡改史实的胆子着实不小。</p>
 <p>国民党将领张发奎晚年曾总结道：1927年夏季，我犯了一个大错误——过分信任共产党，误以为“分共”政策能够兵不血刃地贯彻执行。当时我们既已确立分共政策，就不该同时把军队往东调动以至南昌有隙可乘。我们必须先处置共产党，然后再对付南京。其次，我们应该有力地控制住共产党，它绝非如九江事件中那样不堪一击。至少蔡廷锴师不会通敌叛变，贺龙部也不会易帜。</p>
-<p>而听信了中共参与南昌暴动的贺龙、朱德、陈毅、叶挺等人又有哪一个有好下场呢？</p>
+<p>而听信了中共参与南昌暴动的那些高官又有几个有好下场呢？</p>
+<p>责任编辑：高义</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/12/7/31/n3647744.md#1">“八一建军节”  网友曝中共伪造党史军史</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/17/7/29/n9476881.md#1">林辉：“八一”南昌暴动背后与发起者结局</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/17/8/2/n9490066.md#1">杨昌鸣：南昌暴动被隐去的史实</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/8/1/n10606506.md#1">中共八一建军节 多地老兵维权遭当局围堵</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/7/31/n3647744.md#1">“八一建军节”  网友曝中共伪造党史军史</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/7/29/n9476881.md#1">林辉：“八一”南昌暴动背后与发起者结局</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/8/2/n9490066.md#1">杨昌鸣：南昌暴动被隐去的史实</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/1/n10606506.md#1">中共八一建军节 多地老兵维权遭当局围堵</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10101129.md#1" target="_blank">林辉：沈阳雪堆中千余苏军尸体背后的暴行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/10/n10207223.md#1" target="_blank">共产暴政录：儿子告发母亲致其母被处决</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/6/n10834201.md#1" target="_blank">这些原中共基层官员对李洪志大师的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/4/n12857839.md#1">杨威：三星堆新发现 冲击进化论无神论</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/3/29/n12844310.md#1">金言：改写历史？三星堆掀文明起源争论</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/6/n12861114.md#1">自称死过三次 女网红：人死后时间变得很慢</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867405.md#1">【未解之谜】远古科技：20亿年前核反应堆</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/3/31/n12847960.md#1">蒋经国回忆父亲过世的那段日子</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/11/n12872038.md#1">专访新书作家：成功亚裔与种族歧视的背后</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/10/n12871679.md#1">【探索时分】美军隐形航母杀手AGM-158C</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/10/n12871790.md#1">【新闻看点】美对台新规踩红线 中共诡异没声</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12869998.md#1">山东13岁女孩遭强暴案情节曲折 嫌犯被抓</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867846.md#1">【新闻看点】弗洛伊德案反转？台朝野誓死抗共</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12870127.md#1">北京施压 马云创办的湖畔大学暂停招生</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867529.md#1">全昭旻无惧中共小粉红狙击 35岁生日晒Nike鞋</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12870066.md#1">被刘若英直问从来没娱乐 刘德华发飙原因曝光</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867670.md#1">自曝遭刘嘉玲删微信好友 杨颖解释缘由引热议</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867956.md#1">拍杂志封面 范冰冰诠释三个不同年龄层容貌</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12869071.md#1">林心如配戴上亿珠宝 4岁女儿爱卡通塑胶项链</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867595.md#1">头顶有1大健脑穴位 每天按3分钟 远离失智失眠</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12870136.md#1">腰围3周减11公分！早上喝1杯瘦小腹 还让视力变好</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/3/31/n12849517.md#1">免疫力是最好的药 抗病毒抗菌秘密就在你体内</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12869106.md#1">听老牌空姐的话 搭机时别让头部靠着窗户</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/10/n12870791.md#1">谷歌地图乱带路 害印尼男子差点娶错老婆</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fxhdff3615/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fxhdff3615/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/11/n12872653.htm">周晓辉：南昌暴动中共不敢言说的史实</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/11/n12872653.htm">周晓辉：南昌暴动中共不敢言说的史实</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fxhdff3615/djy/blob/master/gb/21/4/11/n12872653.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fxhdff3615/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fxhdff3615/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fxhdff3615/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/4/11/n12872653.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
